View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031138 | Open CASCADE | OCCT:Visualization | public | 2019-11-06 23:49 | 2020-12-02 17:12 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.5.4 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031138: Visualization - Image_AlienPixMap fails to load PNG image with palette | ||||
Description | Attached PNG file is defined with palette, so that it has to be converted into RGB before usage. Image_AlienPixMap does not handle this scenario correctly and returns failure. | ||||
Steps To Reproduce | pload MODELING VISUALIZATION box b 1 2 3 vclear vinit View1 vdisplay -dispMode 1 b vfit vtexture b CesiumMilkTruck.png | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
CesiumMilkTruck.png (427,633 bytes) |
|
Branch CR31138 has been created by kgv. SHA-1: fcc761cfe6f8471e2f590e07fd2d4e8d218a888f Detailed log of new commits: Author: kgv Date: Wed Nov 6 23:53:53 2019 +0300 0031138: Visualization - Image_AlienPixMap fails to load PNG image with palette Added fallback code converting unsupported pixel format into RGB24 using FreeImage itself. |
|
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31138-master-KGV |
|
Branch CR31138 has been updated by kgv. SHA-1: d7c57d75ff8a2dad65da9146ad73aebffa30780c Detailed log of new commits: Author: kgv Date: Thu Nov 7 11:34:44 2019 +0300 # remarks |
|
The patch was reviewed |
|
Combination - OCCT branch : WEEK-45 master SHA - 08b438b07684090e1a9b77f5ac9d152d4bec10c6 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : WEEK-45 SHA - f88bc93e3637c4c42f3c154c0b0e167d4e297ae6 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16835.010000000126 / 16848.430000000117 [-0.08%] Products Total CPU difference: 10830.110000000055 / 10873.690000000062 [-0.40%] Windows-64-VC14: OCCT Total CPU difference: 18295.625 / 18319.515625 [-0.13%] Products Total CPU difference: 12840.953125 / 12848.859375 [-0.06%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31138 has been deleted by inv. SHA-1: d7c57d75ff8a2dad65da9146ad73aebffa30780c |
occt: master 08b438b0 2019-11-06 20:53:53 Committer: bugmaster Details Diff |
0031138: Visualization - Image_AlienPixMap fails to load PNG image with palette Added fallback code converting unsupported pixel format into RGB24 using FreeImage itself. |
Affected Issues 0031138 |
|
mod - src/Image/Image_AlienPixMap.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-11-06 23:49 | kgv | New Issue | |
2019-11-06 23:49 | kgv | Assigned To | => kgv |
2019-11-06 23:49 | kgv | File Added: CesiumMilkTruck.png | |
2019-11-06 23:55 | git | Note Added: 0088758 | |
2019-11-06 23:57 | kgv | Relationship added | related to 0030946 |
2019-11-06 23:58 | kgv | Product Version | 7.0.0 => 6.5.4 |
2019-11-07 07:54 | kgv | Note Added: 0088760 | |
2019-11-07 07:54 | kgv | Assigned To | kgv => osa |
2019-11-07 07:54 | kgv | Status | new => resolved |
2019-11-07 11:36 | git | Note Added: 0088771 | |
2019-11-07 12:07 | osa | Note Added: 0088772 | |
2019-11-07 12:07 | osa | Assigned To | osa => bugmaster |
2019-11-07 12:07 | osa | Status | resolved => reviewed |
2019-11-08 14:30 | bugmaster | Test case number | => Not required |
2019-11-08 14:30 | bugmaster | Note Added: 0088800 | |
2019-11-08 14:30 | bugmaster | Status | reviewed => tested |
2019-11-10 11:18 | bugmaster | Changeset attached | => occt master 08b438b0 |
2019-11-10 11:18 | bugmaster | Status | tested => verified |
2019-11-10 11:18 | bugmaster | Resolution | open => fixed |
2019-11-10 11:41 | git | Note Added: 0088832 | |
2020-12-02 16:40 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |