0031138: Visualization - Image_AlienPixMap fails to load PNG image with palette

Added fallback code converting unsupported pixel format into RGB24 using FreeImage itself.